# Test

./: .#test  .env  AComponent.cpp  AComponent.hpp  AndComponent.cpp  AndComponent.hpp  AndGate.cpp  AndGate.hpp  BACKEND_IMPLEMENTATION_PLAN.md  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Camera.cpp  Camera.hpp  CameraBuilder.cpp  CameraBuilder.hpp  Circuit.cpp  Circuit.hpp  ClockComponent.cpp  ClockComponent.hpp  Color.cpp  Color.hpp  ComponentFactory.cpp  ComponentFactory.hpp  Dockerfile  Factory.cpp  Factory.hpp  FalseComponent.cpp  FalseComponent.hpp  IComponent.hpp  ILight.hpp  IPrimitive.hpp  Input.cpp  Input.hpp  InputComponent.cpp  InputComponent.hpp  Layers.py  Light.hpp  Makefile  (+178 more)
AI/: Makefile
AI/python_AI/: Makefile  config.py  main.py  output.txt
AI/util/: inv_.py
B-DOP_poll_application (1)/: poll.tar  result.tar  worker.tar
Backend/JEB_INCUBATOR/: db.sqlite3  manage.py
Client1/: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Makefile  client_rtype  main_test.cpp  main_test_game.cpp  mainn.cpp  sprite_test
Client1/src/: Background.cpp  Background.hpp  Button.cpp  ConnectScreen.cpp  ConnectScreen.hpp  GameClient.cpp  GameClient.hpp  GameRenderer.cpp  GameRenderer.hpp  IconButton.cpp  InputSystem.hpp  Lobby.cpp  Lobby.hpp  LobbyListScreen.cpp  LobbyListScreen.hpp  Logo.cpp  Logo.hpp  Menu.cpp  Menu.hpp  ModeSelection.cpp  ModeSelection.hpp  MovementSystem.hpp  MultiplayerHUD.cpp  MultiplayerHUD.hpp  NetworkClient.cpp  NetworkClient.hpp  RoundedRectangleShape.hpp  TestGame.cpp  TestGame.hpp  TextureManager.hpp  WindowManager.cpp  WindowManager.hpp  main.cpp  test_input.cpp  test_login.cpp  test_movement.cpp  test_render.cpp
Client1/src/game/: Bullet.cpp  Bullet.hpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  PowerUp.cpp  PowerUp.hpp  RenderSystem.hpp  components.hpp
Core/: Acore.cpp  Acore.hpp  Core  Makefile  arcade
Frontend/new_projectjeb/: package-lock.json
GUI/: Makefile  note  push.sh  zappy_gui  zappy_server
GUI/includes/: Background.hpp  BoolMenu.hpp  Cinematic.hpp  GUI.hpp  Gamestate.hpp  Loading.hpp  Menu.hpp  Music.hpp  NetworkManager.hpp  Server.hpp  View.hpp  Window.hpp
GUI/src/: Background.cpp  BoolMenu.cpp  Cinematic.cpp  GUI.cpp  Loading.cpp  Menu.cpp  Music.cpp  NetworkManager.cpp  Server.cpp  View.cpp  Window.cpp  main.cpp  main_server.cpp
Games/: IGame.hpp  Makefile  Snake.cpp  Snake.hpp
Graphics/: IGraphical.hpp  Makefile  arcade_ncurses.cpp  arcade_ncurses.hpp  arcade_sdl2.cpp  arcade_sdl2.hpp
Network/: LobbyManager.cpp  LobbyManager.hpp  Networkmanager.cpp  Networkmanager.hpp  concurent_queue.hpp  protocol.hpp  tcp_server.cpp  tcp_server.hpp  udp_server.cpp  udp_server.hpp
SERVER/: Makefile  TESTING_FOOD_DISPATCH.md  fork_eggs.c  handle_cmd.c  handle_poll.c  input.txt  main.c  main2.c  main3.c  player_management.c  ressources.c  socket.c  zappy_server
SERVER/Commandes/: Incantation.c  broad.c  connect.c  eject.c  forward.c  incantation_cmd.c  inventory.c  (+3 more)
UNDERSTOOD/: boot1.py
agridistri-frontend/: .env  package-lock.json  package.json
app/: Distance.hs  Main  Main.hs  Makefile  MyDocFormat.hs  ParserJson.hs  ParserMarkdown.hs  ParserXml.hs  Usage.hs  mypandoc  package.yaml  sample.json  syntaxe.json  testParser  test_minimal.json
area-backend/: AREAS_MODULE_DOCUMENTATION.md  AREAS_MODULE_STATUS.md
backend_intranet/: create_test_data.py  data.json  db.sqlite3  requirements.txt
config/: app.js  database.js  index.js  jwt.js
dataset1/: balanced_dataset.txt  test_dataset.txt
docs/: graphical_implementation_plan.md
engine/: CMakeLists.txt
engine/include/Core/: EngineConfig.hpp  GameEngine.hpp  SceneManager.hpp
engine/include/ECS_architecture/: Component_Manager.hpp  Components.hpp  EntityManager.hpp  Orchestror.hpp  System.hpp  SystemManager.hpp
engine/include/Resources/: AssetFactory.hpp  ResourceManager.hpp
engine/src/Core/: GameEngine.cpp
group_vars/: all.yml  all.yml.backup  all.yml.bak
include/: Acore.hpp  IGame.hpp  IGraphical.hpp  Nibbler.hpp  Snake.hpp  aes_cipher.hpp  arcade_ncurses.hpp  arcade_sdl.hpp  arcade_sfml.hpp  args_parser.hpp  error_handler.hpp  my.h  my_pgp.h  pgp.h  pgp_cipher.hpp  rsa.h  rsa_cipher.hpp  utils.h  utils.hpp  xor.h  xor_cipher.hpp
intranet/: db.sqlite3
jenkins/: jenkins.yaml
middleware/: auth.js  errorHandler.js  index.js  rateLimit.js  upload.js  validation.js
my_docs/: mkdocs.yml
my_torch/: Layers.py  Neuron.py  activations.py  cost_functions.py
myftp/: myftp
nts_single/: 4001_nor.nts
rtype_engine/: CollisionSystem.hpp  Component_storage.hpp  Components.hpp  EnemySystem.hpp  EntityManager.hpp  GameServer.cpp  GameServer.hpp  HealthSystem.hpp  MovementSystem.hpp  Orchestror.hpp  ProjectileSystem.cpp  ProjectileSystem.hpp  SpawnSystem.hpp  System.hpp  SystemManager.hpp  base.hpp  game_test
scenes/: invalid_type.cfg  scene1.cfg  scene_ben.cfg
server_core/: CollisionSystem.cpp  CollisionSystem.hpp  ComponentStorage.cpp  ComponentStorage.hpp  EntityManager.cpp  EntityManager.hpp  GameServer.cpp  GameServer.hpp  HealthSystem.cpp  HealthSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  Snapshot.hpp  SpawnSystem.cpp  SpawnSystem.hpp  main.cpp
server_network/: Networkmanager.hpp  concurent_queue.hpp  protocol.hpp
src/: Acore.cpp  Lib.hs  Nibbler.cpp  Snake.cpp  aes_cipher.cpp  app.controller.ts  app.module.ts  arcade_ncurses.cpp  arcade_sdl.cpp  arcade_sdl2.cpp  arcade_sfml.cpp  args_parser.cpp  error_handler.cpp  main.cpp  pgp_cipher.cpp  rsa_cipher.cpp  utils.cpp  xor_cipher.cpp
system/: CollisionSystem.cpp  CollisionSystem.hpp  EnemySystem.cpp  EnemySystem.hpp  GameServer.cpp  GameServer.hpp  HealthSystem.cpp  HealthSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  ProjectileSystem.cpp  ProjectileSystem.hpp  SpawnSystem.cpp  SpawnSystem.hpp
systems/: CollisionSystem.cpp  CollisionSystem.hpp  MovementSystem.cpp  MovementSystem.hpp
test/: Spec.hs  engine_test.cpp
test_python_app/: requirements.txt
tests/: TestScene.hpp  engine_test.cpp
trainedNeural/: test_trained.nn
(+224 files in other folders)
